[package]
name = "rust-ots"
version = "0.1.0"
authors = ["Villor"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.8"
tokio = { version = "0.3.5", features = ["full"] }
tokio-util = { version = "0.5.0", features = ["codec"] }
bytes = "0.6.0"
adler32 = "1.2.0"
byteorder = "1.3.4"
num-bigint = "0.3.1"
thiserror = "1.0.22"
anyhow = "1.0.34"
log = "0.4.11"
env_logger = "0.8.2"
shipyard = "0.4.1"
spin_sleep = "1.0.0"
flume = "0.9.2"
atomic-counter = "1.0.1"
rand = "0.7.3"
