[package]
name = "rustia-game"
version = "0.1.0"
authors = ["Viktor Gustavsson <villor94@gmail.com>"]
edition = "2018"

[dependencies]
base = { path = "../base", package = "rustia-base" }

smartstring = "0.2"
log = "0.4"
anyhow = "1"
flume = "0.10"
ahash = "0.7"
smallvec = "1.6"
parking_lot = "0.11"
