[package]
name = "rustia-proxy"
version = "0.1.0"
authors = ["Viktor Gustavsson <villor94@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base = { path = "../base", package = "rustia-base" }
protocol = { path = "../protocol", package = "rustia-protocol" }

anyhow = "1"
futures = "0.3.12"
tokio = { version = "1.2.0", features = ["full"] }
tokio-util = { version = "0.6.3", features = ["codec"] }
flume = "0.10"
bytes = "1.0.1"
